rott (1.1.2-2) UNRELEASED; urgency=low

  * Remove "Recommends: timidity" and the corresponding advice in
    debian/README.Debian. Installing the "freepats" package should be
    sufficient for music playback to work (see #498984).
  * Fix a segfault in the Darian level, original bug report and patch
    by Luc Habert (Closes: #700977).
  * Color crosshair by player health.

 -- Fabian Greffrath <fabian+debian@greffrath.com>  Tue, 12 Feb 2013 09:42:07 +0100

rott (1.1.2-1) unstable; urgency=low

  * Imported Upstream version 1.1.2
  * Update Vcs-* fields.
  * Remove all patches applied upstream.
  * Adapt debian/rules to the new build system.

 -- Fabian Greffrath <fabian+debian@greffrath.com>  Tue, 21 Feb 2012 11:56:38 +0100

rott (1.1.1-7) UNRELEASED; urgency=low

  * Clarify relation to game-data-packager and its generated
    packages in debian/control.
  * Export CFLAGS for them to take effect as per dpkg (>= 1.16.1).
  * Update Vcs-Browser field in debian/control.
  * Remove obsolete 00-disable-audiolib.patch and 00-ludicrous-gibs.patch.
  * Bump debhelper compatibility to v9.
  * Fix format string vulnerabilities.
  * Update patches and header information.
  * Update debian/copyright to comply to DEP-5.

 -- Fabian Greffrath <fabian+debian@greffrath.com>  Wed, 15 Feb 2012 13:45:37 +0100

rott (1.1.1-6) unstable; urgency=low

  * bump version for dak (I fumbled the last upload)

 -- Jon Dowland <jmtd@debian.org>  Thu, 24 Mar 2011 15:47:04 +0000

rott (1.1.1-5) unstable; urgency=low

  [ Fabian Greffrath ]
  * Add "Recommends: game-data-packager (>= 24)" and
    move rott-data to Suggests.
  * On remove, if rott-data is installed, delete all files
    that are not in rott-data, delete the whole directory else.
  * Remove debian/rott.dirs, don't claim the /usr/share/games/rott
    directory for this package anymore, it belongs to rott-data.

  [ Jon Dowland ]
  * restore prerm/postinst for alternative. Whoops! That's what
    experimental is for, folks!
